--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -33,6 +34,8 @@
         <activity android:name=".ui.onboarding.ActivityOnboardingLast" />
         <activity android:name=".ui.register.CreateAccountActivity" />
         <activity android:name=".ui.login.SignInActivity" />
+
+        <receiver android:name=".NotificationReceiver" android:enabled="true" android:exported="true" />
     </application>
 
 </manifest>
