--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.KulinerKita"
         tools:targetApi="31">
         <activity
+            android:name=".ui.detailResto.DetailRestoActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/app_name" />
@@ -35,7 +38,10 @@
         <activity android:name=".ui.register.CreateAccountActivity" />
         <activity android:name=".ui.login.SignInActivity" />
 
-        <receiver android:name=".NotificationReceiver" android:enabled="true" android:exported="true" />
+        <receiver
+            android:name=".NotificationReceiver"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
