--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         <activity android:name=".ui.register.CreateAccountActivity" />
         <activity android:name=".ui.login.SignInActivity" />
         <activity android:name=".ui.search.SearchActivity" />
+        <activity android:name=".ui.notification.NotificationActivity"/>
     </application>
 
 </manifest>
